--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "async-tst",
+  "name": "mixin-and-documentation",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "Bastian Winkler <bwinkler@sapient.com>",
+  "author": "Omar Adobati",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
